src/test/deca/syntax/valid/homemade/lexer/test/test_lex_val_chiffres.deca
// Description:
//    Programme minimaliste testant les chiffres.
//
// Resultats:
//    class
//
// Historique:
//    cree le 05/01/2023

{

    int i = 328;
        
}