src/test/deca/syntax/invalid/homemade/test/test_lex_val_floathex_nonum3.deca
// Description:
//    Programme minimaliste testant les float.
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

{
    0x9854f.12P+F
}